<resources>
    <string name="app_name" translatable="false">InstaDownloader</string>
    <string name="btn_download_from_clipboard">PASTE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="how_to">How To</string>
    <string name="action_settings">Settings</string>

    <string name="tab_title_downloading">Download</string>
    <string name="tab_title_history">History</string>

    <string name="option_delete">Delete</string>
    <string name="option_launch">Open Instagram</string>
    <string name="option_copy">Copy Link</string>
    <string name="option_share">Share</string>
    <string name="menu_download_video">DownLoad</string>
    <string name="menu_download_image">Download Thumbnail</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_pause">Pause</string>
    <string-array name="fan_labels" >
        <item>@string/menu_download_video</item>
        <item>@string/menu_download_image</item>
        <item>@string/menu_pause</item>
        <item>@string/menu_delete</item>
    </string-array>

    <string name="download_home_lable">File saved to: /%s</string>
    <string name="repost">Repost</string>
    <string name="spider_request_error">Failed to get the download Link!</string>

    <string name="download_from_send_action">Start get the download Link</string>
    <string name="not_support_url">Please send the correct Link</string>


    <string name="eheck_url_dialgo_title">Waiting.</string>
    <string name="check_url">Checking Link....</string>

    <string name="str_share_this_video">Share</string>

    <string name="clipboard_copy_text">The Link has be copyed into clipboard</string>

    <string name="download_result_success">Download Successed</string>
    <string name="existed_download" translatable="false">File existed</string>
    <string name="download_failed">Download Failed</string>
    <string name="download_result_start">Start Download</string>


    <string name="how_to_1">1.Open Instagram</string>
    <string name="how_to_2">2.Open InstaDownloader</string>
    <string name="how_to_3">3.Click the right button</string>

    <string name="nav_rate_us">Rate Us</string>
    <string name="nav_send">Send</string>
    <string name="nav_change_language">Switch language</string>
    <string name="file_count_format" translatable="false" formatted="false">%1d/%2d</string>

    <!-- -->

    <string name="toast_downlaoded_video">Already Downloaded</string>
    <string name="downloading_left_task_count">%d File Left</string>
    <string name="ratingstar_1">Hated it</string>
    <string name="ratingstar_2">Disliked it</string>
    <string name="ratingstar_3">It\'s OK</string>
    <string name="ratingstar_4">Liked it</string>
    <string name="ratingstar_5">Loved it</string>
    <string name="rating_close">Close</string>
    <string name="rating_RATE">Rate</string>
    <string name="rating_title">We are working hard for a better user experience</string>
    <string name="rating_subtitle">We\'d greatly appreciate if you can rate us.</string>
    <string name="rating_best_operation">The best wo can get</string>

    <string name="option_copy_all">Copy All</string>
    <string name="option_copy_tags">Copy HashTags</string>
    <string name="btn_check_url">Check URL</string>

    <string name="locale_english" translatable="false">English</string>
    <string name="locale_chinese_china" translatable="false">简体中文</string>
    <string name="locale_chinese_taiwan" translatable="false">繁體中文</string>
    <string name="locale_ko" translatable="false">한국의</string>
    <string name="locale_ja" translatable="false">日本の</string>
    <string name="locale_th" translatable="false">ไทย</string>
    <string name="locale_it" translatable="false">lingua italiana</string>
    <string name="locale_tr" translatable="false">Türk dili</string>
    <string name="locale_ru" translatable="false">русский</string>
    <string name="locale_fr" translatable="false">français</string>
    <string name="locale_es" translatable="false">español</string>
    <string name="locale_de" translatable="false">Deutsch</string>
    <string name="locale_hi" translatable="false">हिन्दी</string>
    <string name="locale_in_rID" translatable="false">Indonesia</string>
    <string name="locale_uk_rUA" translatable="false">український</string>
    <string name="locale_vi" translatable="false">tiếng Việt</string>
    <string name="locale_ar" translatable="false">العربية</string>

    <string-array name="support_languages" translatable="false">
        <item>@string/locale_english</item>
        <item>@string/locale_chinese_china</item>
        <item>@string/locale_chinese_taiwan</item>
        <item>@string/locale_ko</item>
        <item>@string/locale_ja</item>
        <item>@string/locale_th</item>
        <item>@string/locale_it</item>
        <item>@string/locale_tr</item>
        <item>@string/locale_ru</item>
        <item>@string/locale_fr</item>
        <item>@string/locale_es</item>
        <item>@string/locale_de</item>
        <item>@string/locale_hi</item>
        <item>@string/locale_in_rID</item>
        <item>@string/locale_uk_rUA</item>
        <item>@string/locale_vi</item>
        <item>@string/locale_ar</item>
    </string-array>
    <string-array name="support_languages_ccd" translatable="false">
        <item>en</item>
        <item>zh</item>
        <item>zh-TW</item>
        <item>ko</item>
        <item>ja</item>
        <item>th</item>
        <item>it</item>
        <item>tr</item>
        <item>ru</item>
        <item>fr</item>
        <item>es</item>
        <item>de</item>
        <item>hi</item>
        <item>in-ID</item>
        <item>uk-rUA</item>
        <item>vi</item>
        <item>ar</item>
    </string-array>


    <!-- -->

    <string name="option_redownload">Download Again</string>


    <!-- -->
    <string name="input_url">Please input the URL</string>
    <string name="request_new_feature">Request New Feature</string>
</resources>
