<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="120dip"
    android:layout_height="wrap_content"
    android:background="@color/page_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/delete"
        style="@style/PopWindowTextStyle"
        android:text="@string/option_delete" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/share"
        style="@style/PopWindowTextStyle"
        android:text="@string/option_share" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/copy"
        style="@style/PopWindowTextStyle"
        android:text="@string/option_copy" />
</LinearLayout>