<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="10dip"
        android:paddingTop="20dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dip"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rating_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textSize="14dip"
                    android:text="@string/rating_title"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/rating_info_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textSize="14dip"
                    android:layout_below="@id/rating_info"
                    android:layout_marginTop="5dip"
                    android:textColor="@color/black"
                    android:text="@string/rating_subtitle"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25dip"
                    android:fontFamily="sans-serif-medium"
                    android:id="@+id/rate_detail"
                    android:visibility="gone"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                    style="@style/Widget.MaterialRatingBar.RatingBar"
                    android:layout_width="match_parent"
                    android:id="@+id/rating_us"
                    android:layout_height="50dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/user_hand"
                    android:scaleType="center"
                    android:layout_marginRight="18dip"
                    android:layout_below="@id/rating_us"
                    android:layout_alignParentRight="true"
                    />

            </RelativeLayout>


            <TextView
                android:id="@+id/best_operation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="14dip"
                android:layout_marginTop="5dip"
                android:layout_marginLeft="15dip"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                android:text="@string/rating_best_operation"
                />


        </LinearLayout>

    </FrameLayout>
</FrameLayout>